# veclib

./: README.md  pyproject.toml  pyrightconfig.json
src/veclib/: __init__.py
src/veclib/exceptions/: exceptions.py
src/veclib/vector/: vector.py
src/vecpy/: __init__.py
src/vecpy/exceptions/: exceptions.py
src/vecpy/vector/: vector.py
tests/: test_vector.py
