[tool.poetry]
name = "veclib"
version = "0.1.0"
description = "The `pathlib` of vector mathematics."
authors = ["imsasankvindamuri <imsasankvindamuri@gmail.com>"]
readme = "README.md"
packages = [{include = "vecpy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
